syntax = "proto3";
package cschain.modules.record;

import "third_party/proto/gogoproto/gogo.proto";

option go_package = "github.com/bianjieai/irita-sdk-go/modules/record";

// MsgCreateRecord defines an SDK message for creating a new record.
message MsgCreateRecord {
  option (gogoproto.equal) = true;

  repeated Content contents = 1 [(gogoproto.nullable) = false];
  bytes            creator  = 2 [
    (gogoproto.casttype) = "github.com/bianjieai/irita-sdk-go/types.AccAddress"
  ];
}

// Content defines a detail information for a record.
message Content {
  option (gogoproto.equal)            = true;

  string  digest     = 1;
  string  digest_algo = 2 [(gogoproto.moretags) = "yaml:\"digest_algo\""];
  string  uri  = 3 [(gogoproto.moretags) = "yaml:\"uri\"",(gogoproto.customname) = "URI"];
  string  meta = 4;
}

message Record {
  option (gogoproto.equal)            = true;

  bytes tx_hash  = 1 [
    (gogoproto.casttype) = "github.com/tendermint/tendermint/libs/bytes.HexBytes",
    (gogoproto.moretags) = "yaml:\"tx_hash\""
  ];
  repeated Content contents = 2 [(gogoproto.nullable) = false];
  bytes            creator  = 3 [
    (gogoproto.casttype) = "github.com/bianjieai/irita-sdk-go/types.AccAddress"
  ];
}